# petition-tp-python

./: .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  setup.py
src/: setup.cfg  setup.py
src/tests/: conftest.py  test_petition.py  test_token.py
src/tp/: main.py
src/tp/client/: main.py  petition_client.py  sawtooth.py
src/tp/lib/: sawtooth.py
src/tp/processor/: handler.py  main.py  payload.py  petition_payload.py
src/tp/server/: juicer.py  main.py  petition.py  security.py
website/: mkdocs.yml
website/docs/: README.md
website/mkdocs-dyne-theme/partials/: sidebar.html
