# coding: utf-8
[metadata]
name = petition-tp-python
description = DECODE Petition Pilot Transaction Processor for Hyperledger Sawtooth
long_description = file: README.md
long_description_content_type = text/markdown
author = Puria Nafisi Azizi
author_email = puria@dyne.org
project_urls =
    Source Code = https://github.com/DECODEproject/petition-tp-python
    Zenroom = https://zenroom.dyne.org
    DECODE = https://decodeproject.eu

license =
keywords =
classifiers =
        Development Status :: 3 - Alpha
        License :: OSI Approved :: GNU Affero General Public License v3
        Intended Audience :: Developers
        Operating System :: POSIX :: Linux
        Operating System :: MacOS :: MacOS X
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Topic :: Security

[options]
packages = find:

[options.extras_require]
test =
    pytest
    pytest-cov

[tool:pytest]
addopts = -rsx --cov --tb=short
testpaths = tests

[coverage:run]
source = src

[coverage:report]
show_missing = true

[flake8]
ignore = E501
max-line-length = 99
exclude = .tox,build,docs

[bdist_wheel]
universal = 1

[aliases]
test=pytest